[package]
name = "lyssa_rds_gen"
version = "1.0.0"
edition = "2021"
authors = ["LyssaRDSGen Contributors"]
description = "Generate RDS License Keys with GUI support"
license = "MIT"

[dependencies]
# Cryptography
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
sha1 = "0.10"
md5 = "0.7"
rand = "0.8"

# GUI (optional)
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"], optional = true }
egui = { version = "0.27", optional = true }

# TUI (Terminal User Interface) - 默认可选
crossterm = { version = "0.29.0", optional = true }
ratatui = { version = "0.29.0", optional = true }

# CLI
clap = { version = "4.5.51", features = ["derive"] }

# Utilities
anyhow = "1.0"

[features]
default = [] # 保持默认为空，不自动启用 tui 或 gui
# 定义组合特性，方便 CI 调用
tui_only = ["crossterm", "ratatui"]
gui_with_tui = ["eframe", "egui", "crossterm", "ratatui"]

# [[bin]] 配置
# 默认二进制文件 (无 tui, 无 gui)
[[bin]]
name = "lyssa_rds_gen"
path = "src/main.rs"
required-features = []

# TUI 二进制文件 (启用 tui, 无 gui)
[[bin]]
name = "lyssa_rds_gen_tui"
path = "src/main.rs"
required-features = ["tui_only"]

# GUI 二进制文件 (启用 gui 和 tui)
[[bin]]
name = "lyssa_rds_gen_gui"
path = "src/main.rs"
required-features = ["gui_with_tui"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Static linking configuration for Windows
[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-feature=+crt-static"]

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

# Static linking configuration for Linux (musl)
[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]
